oposSOM 1.5.4: A bug was fixed, which was caused by an altered function from igraph package.